--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../compiled/flipclock.css">
+		<link rel="stylesheet" href="flipclock.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-		<script src="../compiled/flipclock.js"></script>		
+		<script src="flipclock.js"></script>		
 	</head>
 	<body>
 		<h1>Death Clock</h1>
