--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				    // Calculate the difference in seconds between the future and current date 
 				    var diff = (futureDate - currentDate)/ 1000; 
 				    // Instantiate a coutdown FlipClock 
-				    clock = $('.clock').FlipClock(diff, { clockFace: 'secondCounter', countdown: true, int: 1 }); 
+				    clock = $('.clock').FlipClock(diff, { clockFace: 'DailyCounter', countdown: true, int: 1 }); 
 				});
 				
 	
